[gd_scene load_steps=4 format=3 uid="uid://k807hv4cekdh"]

[ext_resource type="Texture2D" uid="uid://dfu8gjxf02h2s" path="res://ui/shared/TEMPORARY_background.png" id="1_urf3k"]
[ext_resource type="Script" uid="uid://b51l1gk7h1o66" path="res://ui/main_menu/navigation.gd" id="2_f7xsy"]
[ext_resource type="Theme" uid="uid://l4fn7cedqo3m" path="res://ui/shared/graphics/themes/default_button.tres" id="3_y3g0o"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_urf3k")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 200

[node name="MenuButtons" type="VBoxContainer" parent="MainMenu/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20
script = ExtResource("2_f7xsy")

[node name="NewGame" type="Button" parent="MainMenu/HBoxContainer/MarginContainer/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_y3g0o")
text = "Nowa gra"

[node name="Load" type="Button" parent="MainMenu/HBoxContainer/MarginContainer/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_y3g0o")
text = "Wczytaj grę"

[node name="Settings" type="Button" parent="MainMenu/HBoxContainer/MarginContainer/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_y3g0o")
text = "Ustawienia"

[node name="Quit" type="Button" parent="MainMenu/HBoxContainer/MarginContainer/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_y3g0o")
text = "Wyjdź"

[node name="Control" type="Control" parent="MainMenu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="MainMenu/HBoxContainer/MarginContainer/MenuButtons/NewGame" to="MainMenu/HBoxContainer/MarginContainer/MenuButtons" method="_on_new_game_pressed"]
[connection signal="pressed" from="MainMenu/HBoxContainer/MarginContainer/MenuButtons/Load" to="MainMenu/HBoxContainer/MarginContainer/MenuButtons" method="_on_load_pressed"]
[connection signal="pressed" from="MainMenu/HBoxContainer/MarginContainer/MenuButtons/Settings" to="MainMenu/HBoxContainer/MarginContainer/MenuButtons" method="_on_settings_pressed"]
[connection signal="pressed" from="MainMenu/HBoxContainer/MarginContainer/MenuButtons/Quit" to="MainMenu/HBoxContainer/MarginContainer/MenuButtons" method="_on_quit_pressed"]
